syntax = "proto3";

package data;

import "data/palette/global.proto";

// // // //

message PaletteCaveColorsObj {
  PaletteRgbObj page = 1;
  PaletteRgbObj floor = 2;
  PaletteRgbObj water = 3;
  PaletteRgbObj ink = 4;
}

message PaletteCaveShadowObj {
  float shade_alpha = 1;
  float shadow_alpha = 2;
  float shadow_dist = 3;
}

message PaletteCaveStrokesObj {
  float wall = 1;
  float detail = 2;
  float hatch = 3;
  float grid = 4;
}

message PaletteCaveHatchingObj {
  uint32 strokes = 1;
  float size = 2;
  float distance = 3;
  float stones = 4;
}

//

message PaletteCaveObj {
  PaletteCaveColorsObj colors = 1;
  PaletteCaveShadowObj shadow = 2;
  PaletteCaveStrokesObj strokes = 3;
  PaletteCaveHatchingObj hatching = 4;
}
